petal_core/src/snapshots/petal__petal__parser__tests__functions.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo() {}\")"
---
(
    [
        Identifier {
            name: "foo",
            span: Span {
                start: Pos(
                    3,
                ),
                end: Some(
                    Pos(
                        5,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [],
    [
        StmtNode {
            stmt: BlockStmt(
                Block {
                    statements: [],
                },
            ),
            span: Span {
                start: Pos(
                    9,
                ),
                end: Some(
                    Pos(
                        10,
                    ),
                ),
            },
        },
    ],
    [
        FuncDecl {
            ident: IdentId(
                1v1,
            ),
            is_exported: false,
            type_params: [],
            args: [],
            return_ty: None,
            body: StmtId(
                1v1,
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        10,
                    ),
                ),
            },
        },
    ],
)
